[package]
name = "holla"
version = "0.1.0"
authors = ["soap"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
genai = "0.1.7"
tokio = { version = "1.39.2", default-features = false, features = ["macros", "rt-multi-thread"] }
serde = { version = "1.0.208", features = ["derive"] }
serde_json = "1.0.125"
ratatui = "0.28.0"